--- a/Posetrix/Posetrix/Posetrix.csproj
+++ b/Posetrix/Posetrix/Posetrix.csproj
@@ -8,4 +8,8 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Posetrix.Core\Posetrix.Core.csproj" />
+  </ItemGroup>
+
 </Project>
