style: add windows and buttons for user controls

--- a/Posetrix/Posetrix/Posetrix.csproj
+++ b/Posetrix/Posetrix/Posetrix.csproj
@@ -9,7 +9,19 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Images\undraw_workout_gcgu.svg" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="SharpVectors" Version="1.8.4.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Posetrix.Core\Posetrix.Core.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Images\undraw_workout_gcgu.svg" />
   </ItemGroup>
 
 </Project>
