--- a/Posetrix/Posetrix.csproj
+++ b/Posetrix/Posetrix.csproj
@@ -13,7 +13,6 @@
     <None Remove="Images\Icons\book%281%29.png" />
     <None Remove="Images\Icons\book.png" />
     <None Remove="Images\undraw_walk_ing_qkyj.png" />
-    <None Remove="Images\undraw_workout_gcgu.png" />
     <None Remove="Images\undraw_workout_gcgu.svg" />
   </ItemGroup>
 
@@ -47,7 +46,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Images\undraw_workout_gcgu.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Images\undraw_workout_gcgu.svg" />
   </ItemGroup>
