--- a/Posetrix.Avalonia/Posetrix.Avalonia.csproj
+++ b/Posetrix.Avalonia/Posetrix.Avalonia.csproj
@@ -27,4 +27,12 @@
         <PackageReference Include="LucideAvalonia" Version="1.6.1" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.0" />
     </ItemGroup>
+
+    <ItemGroup>
+      <Compile Remove="ViewModels\MainWindowViewModel.cs" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Posetrix.Core\Posetrix.Core.csproj" />
+    </ItemGroup>
 </Project>
