--- a/Posetrix.Core/Posetrix.Core.csproj
+++ b/Posetrix.Core/Posetrix.Core.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Remove="Assets\Images\Enthusiastic-rafiki.svg" />
+  </ItemGroup>
+
 </Project>
