--- a/Posetrix.Avalonia/Posetrix.Avalonia.csproj
+++ b/Posetrix.Avalonia/Posetrix.Avalonia.csproj
@@ -25,6 +25,7 @@
         </PackageReference>
         <PackageReference Include="CommunityToolkit.Mvvm" Version="8.3.2" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.0" />
+        <PackageReference Include="SixLabors.ImageSharp" Version="3.1.6" />
     </ItemGroup>
 
     <ItemGroup>
