--- a/Posetrix/Posetrix.csproj
+++ b/Posetrix/Posetrix.csproj
@@ -25,6 +25,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Posetrix.Core\Posetrix.Core.csproj" />
+    <ProjectReference Include="..\Posetrix.SharedAssets\Posetrix.SharedAssets.csproj" />
   </ItemGroup>
 
   <ItemGroup>
@@ -33,8 +34,6 @@
     <Resource Include="Assets\Fonts\Segoe UI.ttf" />
     <Resource Include="Assets\Icons\book(1).png" />
     <Resource Include="Assets\Icons\book.png" />
-    <None Remove="Assets\Images\Happy Earth-bro.png" />
-    <Resource Include="Assets\Images\Happy-Earth-bro.png" />
   </ItemGroup>
 
   <ItemGroup>
