refactor: rename views, optimize bitmap loading

--- a/Posetrix.Assets/Posetrix.Assets.csproj
+++ b/Posetrix.Assets/Posetrix.Assets.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Images\undraw_bug_fixing.png" />
+  </ItemGroup>
+
+  <ItemGroup>
     <EmbeddedResource Include="Icons\avalonia-logo.ico">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </EmbeddedResource>
@@ -19,6 +23,12 @@
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </EmbeddedResource>
     <EmbeddedResource Include="Icons\pencil.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </EmbeddedResource>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="Images\undraw_bug_fixing.png">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </EmbeddedResource>
   </ItemGroup>
