--- a/Posetrix.Avalonia/Posetrix.Avalonia.csproj
+++ b/Posetrix.Avalonia/Posetrix.Avalonia.csproj
@@ -23,6 +23,7 @@
             <PrivateAssets Condition="'$(Configuration)' != 'Debug'">All</PrivateAssets>
         </PackageReference>
         <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
+        <PackageReference Include="LibVLCSharp.Avalonia" Version="3.9.1" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.0" />
         <PackageReference Include="SixLabors.ImageSharp" Version="3.1.6" />
     </ItemGroup>
@@ -46,5 +47,11 @@
 
     <ItemGroup>
       <Folder Include="Resources\" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <AvaloniaResource Include="Assets\Icons\favicon.ico">
+        <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+      </AvaloniaResource>
     </ItemGroup>
 </Project>
