--- a/.github/workflows/deploy-posetrix.yml
+++ b/.github/workflows/deploy-posetrix.yml
@@ -1,27 +1,41 @@
 name: "Deploy Posetrix"
 
 on:
-    push:
-        tags:
-            - "v*"
+  push:
+    tags:
+      - 'v*'   # Trigger on semantic version tags
+  release:
+    types:
+      - created  # Trigger on new releases
     workflow_dispatch:
 env:
     PROJECT_PATH: Posetrix/Posetrix.csproj
 jobs:
-    deploy:
+    build:
         runs-on: windows-latest
+
         steps:
-        - uses: actions/checkout@v2
-        
-        - uses: actions/setup-dotnet@v1
-          with:
-            dotnet-version: '9.0.x'
+            - name: Checkout repository
+              uses: actions/checkout@v4
+            
+            - name: Set up NET
+              uses: actions/setup-dotnet@v4
+              with:
+                dotnet-version: '9.0.x'
 
-        - run: dotnet restore ${{ env.PROJECT_PATH }}
-  
-        - run: dotnet build ${{ env.PROJECT_PATH }} -c Release --no-restore
-  
-        - run: dotnet publish ${{ env.PROJECT_PATH }} -c Release --self-contained -r win-x64 -p:PublishSingleFile=true
+            - name: Restore dependencies
+              run: dotnet restore
 
+            - name: Build project
+              run: dotnet build -c Release -o ./output
+
+            - name: Publish project
+              run: dotnet publish -c Release --self-contained -r win-x64 -p:PublishSingleFile=true
+
+            - name: Upload artifact
+              uses: actions/upload-artifact@v4
+              with:
+                name: Posetrix-SelfContained
+                path: ./output
 
     
