--- a/Posetrix/Posetrix.csproj
+++ b/Posetrix/Posetrix.csproj
@@ -12,8 +12,11 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <None Remove="Assets\Images\undraw_bug-fixing_sgk7.png" />
 	  <None Remove="Assets\Images\undraw_coffee-time_98vi.png" />
-	  <None Remove="Assets\Images\undraw_snap-the-moment_96zx.png" />
+	  <None Remove="Assets\Images\undraw_fixing-bugs_13mt.png" />
+	  <None Remove="Assets\Images\undraw_progress-data_gvcq.png" />
+	  <None Remove="C:\Users\zhemc\.nuget\packages\naudio.vorbis\1.5.0\contentFiles\any\netstandard2.0\README.md" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -60,25 +63,14 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Resource Include="Assets\Images\jason-leung-Xaanw0s0pMk-unsplash.jpg">
-	    <CopyToOutputDirectory>Never</CopyToOutputDirectory>
-	  </Resource>
-	  <Resource Include="Assets\Images\undraw_bug_fixing.png">
+	  <Resource Include="Assets\Images\undraw_bug-fixing_sgk7.png">
 	    <CopyToOutputDirectory>Never</CopyToOutputDirectory>
 	  </Resource>
 	  <Resource Include="Assets\Images\undraw_coffee-time_98vi.png">
 	    <CopyToOutputDirectory>Never</CopyToOutputDirectory>
 	  </Resource>
-	  <Resource Include="Assets\Images\undraw_fixing_bugs_w7gi.png">
-	    <CopyToOutputDirectory>Never</CopyToOutputDirectory>
-	  </Resource>
-	  <Resource Include="Assets\Images\undraw_happy_music_g6wc.png">
-	    <CopyToOutputDirectory>Never</CopyToOutputDirectory>
-	  </Resource>
-	  <Resource Include="Assets\Images\undraw_snap-the-moment_96zx.png">
-	    <CopyToOutputDirectory>Never</CopyToOutputDirectory>
-	  </Resource>
-	  <Resource Include="Assets\Images\undraw_winners_re_wr1l.png">
+	  <Resource Include="Assets\Images\undraw_fixing-bugs_13mt.png" />
+	  <Resource Include="Assets\Images\undraw_progress-data_gvcq.png">
 	    <CopyToOutputDirectory>Never</CopyToOutputDirectory>
 	  </Resource>
 	</ItemGroup>
