--- a/.github/workflows/deploy-posetrix.yml
+++ b/.github/workflows/deploy-posetrix.yml
@@ -6,7 +6,7 @@ on:
         - "v*.*.*"
            
 env:
-   PROJECT_PATH: Posetrix/Posetrix.csproj
+   PROJECT_PATH: Posetrix.csproj
     
 jobs:
   deploy:
@@ -41,12 +41,12 @@ jobs:
             Compress-Archive -Path publish-output-self-contained\* -DestinationPath artifacts\Posetrix-${{ github.ref_name }}-self-contained.zip
 
         - name: Create framework-dependent zip
-          run: Compress-Archive -Path publish-output-framework-dependent\* -DestinationPath artifacts\Posetrix-${{ github.ref_name }}-NET-dependent.zip
+          run: Compress-Archive -Path publish-output-framework-dependent\* -DestinationPath artifacts\Posetrix-${{ github.ref_name }}.zip
   
         - name: Release
           uses: softprops/action-gh-release@v2
           if: startsWith(github.ref, 'refs/tags/')
           with:
             files: |
+                artifacts/Posetrix-${{ github.ref_name }}.zip
                 artifacts/Posetrix-${{ github.ref_name }}-self-contained.zip
-                artifacts/Posetrix-${{ github.ref_name }}-NET-dependent.zip
