build: update workflow
Added unit tests.

--- a/.github/workflows/deploy-posetrix.yml
+++ b/.github/workflows/deploy-posetrix.yml
@@ -22,6 +22,10 @@ jobs:
           with: 
             dotnet-version: 9.0.x
 
+        # Execute all unit tests in the solution
+        - name: Execute unit tests
+          run: dotnet test
+
         - name: Restore dependencies
           run: dotnet restore ${{ env.PROJECT_PATH }}
   
